--- a/_config.yml
+++ b/_config.yml
@@ -70,4 +70,5 @@ theme: next
 deploy:
   type: git
   repo:
+    github: git@github.com:lili-an/lili-an.github.io.git,master
     coding: git@git.coding.net:stto/stto.git,master
